--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <strong>Venue:</strong> MKU Pavilion Ground
         </p>
         <blockquote>The after Party Date will be updated soon</blockquote>
+        <blockquote>(Refresh the page after a day)</blockquote>
         <blockquote>
           “May He give you the desire of your heart and make all your plans
           succeed.” <br />
@@ -36,3 +37,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
